--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,10 @@
+27.03.2025
+
+- update kernel to version 6.6.79
+- temporary lock of kernel 6.12.x
+- normal system updates
+
+
 19.02.2025
 
 - update kernel to version 6.6.74
