--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,10 @@
+03.07.2025
+
+- update kernel to version 6.12.31
+- normal system updates
+- update docs
+
+
 04.05.2025
 
 - update kernel to version 6.12.x
