--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+29.08.2025
+
+- update kernel to version 6.12.41
+- normal system updates
+- change to newer cputype -> x86-64-v3
+
 03.07.2025
 
 - update kernel to version 6.12.31
